# HaskellProjects

./: README.md
FinalProject/: ColossalCave  ColossalCave.hs
FinalProject/ColossalCaveAdventure/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
FinalProject/ColossalCaveAdventure/app/: Main.hs
hw1/: LICENSE  README  hw1.cabal
hw1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw1/dist-newstyle/packagedb/ghc-8.0.2/: hw1-1.0.0.0-inplace.conf  package.cache
hw1/src/: Main.hs  TicTacToe.lhs
hw1/test/: Spec.hs  TicTacToeSpec.hs
hw2/: README  hw2.cabal
hw2/.stack-work/: stack.sqlite3
hw2/.stack-work/ghci/c10e8c9a/: cabal_macros.h
hw2/.stack-work/ghci/e3d766aa/: cabal_macros.h
hw2/.stack-work/install/x86_64-linux/6fdabeaa3f35a6db91fa5ad92ee1cb652ecb1000bac421417fb42565ca1f1b86/8.6.5/doc/hw2-0.1.0.0/: LICENSE
hw2/.stack-work/install/x86_64-linux/6fdabeaa3f35a6db91fa5ad92ee1cb652ecb1000bac421417fb42565ca1f1b86/8.6.5/lib/x86_64-linux-ghc-8.6.5/hw2-0.1.0.0-70CPsgXgEys96jfH5ARbvv/: Semigroups.dyn_hi  Semigroups.hi
hw2/.stack-work/install/x86_64-linux/6fdabeaa3f35a6db91fa5ad92ee1cb652ecb1000bac421417fb42565ca1f1b86/8.6.5/pkgdb/: hw2-0.1.0.0-70CPsgXgEys96jfH5ARbvv.conf  package.cache
hw2/dist-newstyle/cache/: config
hw2/src/: Semigroups.lhs
hw2/test/: SemigroupSpec.hs  Spec.hs
hw3/: README  hw3.cabal
hw3/.stack-work/: stack.sqlite3
hw3/.stack-work/ghci/b9557064/: cabal_macros.h
hw3/.stack-work/install/x86_64-linux/661caf7e7e3d4fc8d8dec2945718df0a590690b048f0ba3e79d34ff0aa821fa5/8.6.5/lib/x86_64-linux-ghc-8.6.5/hw3-1.0.0.0-8SXvMTDZwZ17HtYjpUHI2g/: Monoids.dyn_hi  Monoids.hi
hw3/.stack-work/install/x86_64-linux/661caf7e7e3d4fc8d8dec2945718df0a590690b048f0ba3e79d34ff0aa821fa5/8.6.5/pkgdb/: hw3-1.0.0.0-8SXvMTDZwZ17HtYjpUHI2g.conf  package.cache
hw3/src/: Main.hs  Monoids.lhs
hw3/test/: MonoidSpec.hs  Spec.hs
hw3/texts/: alice.txt  ecma.txt  style.txt
hw4/: README  hw4.cabal
hw4/.stack-work/: stack.sqlite3
hw4/.stack-work/ghci/822a92cf/: cabal_macros.h
hw4/.stack-work/ghci/e485d677/: cabal_macros.h
hw4/.stack-work/install/x86_64-linux/686ffbe051341b7fb4a80ab42e5ec6a1864d75b8bd6e1b66b46aefecc8bf9a3f/8.6.5/lib/x86_64-linux-ghc-8.6.5/hw4-0.1.0.0-9XHRsklhAukCwGU3ehOYOn/: Foldables.dyn_hi
hw4/.stack-work/install/x86_64-linux/686ffbe051341b7fb4a80ab42e5ec6a1864d75b8bd6e1b66b46aefecc8bf9a3f/8.6.5/pkgdb/: hw4-0.1.0.0-9XHRsklhAukCwGU3ehOYOn.conf  package.cache
hw4/src/: Foldables.lhs
hw4/test/: FoldableSpec.hs  Spec.hs
