name: hw2
version: 0.1.0.0
synopsis: CS457/557 Winter 2020 Homework 2
homepage: https://github.com/kcsmnt0/hw2#readme
license: BSD3
license-file: LICENSE
author: Katie Casamento
maintainer: kcsmnt0@gmail.com
copyright: Katie Casamento
category: Homework
build-type: Simple
cabal-version: >=1.10
extra-source-files: README

library
  exposed-modules: Semigroups
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  build-depends: base >= 4.11 && < 5
  default-extensions: DeriveFoldable DeriveGeneric

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  other-modules: SemigroupSpec
  main-is: Spec.hs
  default-extensions: AllowAmbiguousTypes ScopedTypeVariables TypeApplications
  build-depends: base >=4.9 && <5, generic-arbitrary, hspec, QuickCheck, hw2
