name: hw4
version: 0.1.0.0
synopsis: CS457/557 Winter 2020 Homework 4
license: BSD3
license-file: LICENSE
author: Katie Casamento
maintainer: cas28@pdx.edu
copyright: Katie Casamento
category: Homework
build-type: Simple
cabal-version: >=1.10
extra-source-files: README

library
  hs-source-dirs: src
  exposed-modules: Foldables
  default-language: Haskell2010
  build-depends: base >= 4.9 && < 5, appendmap, containers
  ghc-options: -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  default-extensions:
    DeriveGeneric ExplicitForAll FlexibleInstances GeneralizedNewtypeDeriving
    InstanceSigs KindSignatures

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -fwarn-incomplete-patterns -fwarn-incomplete-uni-patterns
  other-modules: FoldableSpec
  main-is: Spec.hs
  build-depends:
    base >=4.9 && <5, hw4, appendmap, containers, generic-arbitrary, hspec,
    QuickCheck
  default-extensions: AllowAmbiguousTypes KindSignatures ScopedTypeVariables TypeApplications
